# alexandria-db

./: .gitignore  .travis.yml  Cargo.toml
scripts/: install-tests.sh  run-tests.sh
src/: main.rs
src/api/controllers/: book.rs  mod.rs  reading.rs  search.rs
src/api/models/: book.rs  common.rs  mod.rs  reading.rs
src/db/: book_api.rs  common.rs  mod.rs
src/db_api/: book_api.rs  common.rs  reading_api.rs
src/db_storage/: dummy.db
src/routes/: master_route.rs  mod.rs
src/routes/create/: book.rs  reading.rs
src/routes/delete/: book.rs  reading.rs
src/routes/get/: book.rs  mod.rs  reading.rs
src/routes/read/: book.rs  reading.rs
src/routes/search/: search.rs
src/routes/update/: book.rs  reading.rs
