[package]
name = "alexandria-db"
version = "0.1.0"
authors = ["jordan seiler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server crates
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

# Database related crates
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]

[dependencies.serde]
version = "1"
features = ["derive"]

